Remove boilerplate, add POD

--- a/Changes
+++ b/Changes
@@ -1,5 +1,4 @@
 Revision history for WebService-OCTranspo
 
-0.01    Date/time
+0.010	Mon, 07 May 2007 23:44:03 -0400 dmo
         First version, released on an unsuspecting world.
-
