--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for WebService-OCTranspo
 
+0.025	Sat, 12 May 2007 00:47:04 -0400	dmo
+	- testing added
+	- minor cleanups to prepare for CPAN release
+
 0.011	Tue, 08 May 2007 19:25:08 -0400 dmo
 	- only match full route number, not a partial (solves '1' matching for route 111 stops)
 	- Error handling for routes that don't exist
